
Features:
    - PostgresListener now knows about advisory locks.

    - The database-contrib now has a service-module with two
      PostgresListener-base-classes, for making services that should react to
      Postgres-notifications.

    - ``piped.util`` gained a contextual ``DeferredLock`` and a
      ``BackoffWaiter``.

Bug fixes:
    - ``piped.contrib.zookeeper`` attempted to log a line with formatting errors
      after connecting to ZooKeeper.

========================== Release 0.5.1 2012-11-16 ==========================

Bug fixes:
    - ``p.util.Cancellable.disown_cancellable_parent_callback`` now correctly
      passes the return value through.

    - The ZooKeeper provider should now parse multiple servers with chroots
      correctly.

========================== Release 0.5.0 2012-09-23 ==========================

Features:
    - Plugin-loaded services: ``IPipedService``-plugins, with a helper
      ``PipedService``-base class in ``piped.service``. If the service uses
      dependencies from other providers, consider using
      ``DependencyPipedService``.

Internal changes:
    - ``piped.util.wait(..)`` is now cancellable.
    - ``DependencyManager.add_dependency(foo)`` now returns ``foo`` as a
     dependency after binding it to the dependency graph instead of returning
     ``None``.

    - The database contrib has been reworked. By just providing
      SQLAlchemy engines instead of MetaData, it's a lot simpler. The
      API is still unstable, though.

    - A PostgresListener-service makes working with asynchronous
      notifications from a Postgres database a lot simpler. It also
      has utilities for watching transaction snapshot threshold, which
      is useful when implementing certain syncing strategies.

Backward-incompatible changes:

    - The database-contrib now provides and manages SQLAlchemy
      engines, instead of ``MetaData``.

Bug fixes:
    - The ZooKeeper provider could sometimes fail connecting while still