@@ -10,6 +10,8 @@ Features:
     - ``piped.util`` gained a contextual ``DeferredLock`` and a
       ``BackoffWaiter``.
 
+    - ZooKeeper-contrib now authenticates and creates nodes with default ACLs.
+
 Bug fixes:
     - ``piped.contrib.zookeeper`` attempted to log a line with formatting errors
       after connecting to ZooKeeper.
